logs/superceded/run_20251202_103101.log
nohup: ignoring input
Traceback (most recent call last):
  File "/home/lisa4090/Documents/GitHub/V2B_Optimization_with_AI_on_BSS/main.py", line 3, in <module>
    from MILP.EnergyAllocator import EnergyAllocator
  File "/home/lisa4090/Documents/GitHub/V2B_Optimization_with_AI_on_BSS/MILP/EnergyAllocator.py", line 303
    idx: int,
    ^^^^^^^^
SyntaxError: parameter without a default follows parameter with a default
